# op2-c-reference

./: CMakeLists.txt  README.md  cmake.local  conf.local
examples/C/airfoil/: CMakeLists.txt  adt_calc.h  airfoil.c  save_soln.h
examples/C/jac1/: CMakeLists.txt
examples/C/jac2/: CMakeLists.txt
examples/C/laplace1d/: CMakeLists.txt  laplace.c  laplace.h
op2/: CMakeLists.txt  op2.h
op2/common/: op_common.h  op_datatypes.c  op_datatypes.h  op_globals.h  op_mat.cpp  op_mat.cpp~  op_par_loop_gen.py
op2/reference/: op_common_ref.c  op_datatypes_ref.c  op_par_loop_ref.c
op2/util/: op_par_loop_gen.py
src/common/: op_common.h  op_datatypes.c  op_datatypes.h  op_globals.h  op_par_loop_gen.py
src/reference/: op_common_ref.c  op_datatypes_ref.c
test/airfoil/: airfoil.c
